[package]
name = "discord_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
dashmap = "6.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
